log/build_2025-04-18_21-03-09/turtlesim_catch_them_all_py/stderr.log
  File "/home/vincent-pc/ros2_foxy/install/turtlesim_catch_them_all_py/lib/python3.8/site-packages/turtlesim_catch_them_all_py/turtle_controller.py", line 75
    def call_catch_turtle_service(self, turtle_name)
                                                   ^
SyntaxError: invalid syntax

